    * [IKASAN-530] - Make the MonitorEmailNotifier configurable for the alerted status and email recipients 
    * [IKASAN-531] - Create a consistent and re-usable separation between Ikasan components and the underlying protocol (starting with SFTP)
    * [IKASAN-537] - Adjust package name of the connector-sftp client endpoint to reflect it as an endpoint

** New Feature
    * [IKASAN-106] - Add the ability for users to select the number of search results per page for wiretap searches
    * [IKASAN-122] - Create a new component/sub project within IkasanEIP for Integration Tests 
    * [IKASAN-187] - Create the JmsConnectionFactory as a platform service
    * [IKASAN-198] - Show/Hide Search fields in Wiretap Search screen
    * [IKASAN-260] - Add ability to display diagram of module in console, especially for search
    * [IKASAN-482] - Ability for Initiators to invoke existing lifecycle hooks on resources used within flow components
    * [IKASAN-521] - New transformer component for GZIP formats






** Task
    * [IKASAN-7] - Extract TPublisher, TSubscriber and TUnsubscriber out of Common project into a tools project
    * [IKASAN-12] - Refactor the flow invocation routine from amoungst existing Initiators
    * [IKASAN-13] - Move core ExceptionHandling into Initiators
    * [IKASAN-15] - Enforce provision of Id on creation of new Events
    * [IKASAN-144] - Merge framework-0.7.1 back to trunk
    * [IKASAN-148] - Remove DatasourceSessionFactoryFactory as it is redundant
    * [IKASAN-174] - Merge webconsole 0.7.1 into trunk
    * [IKASAN-193] - Merge 0.7.2 back into trunk
    * [IKASAN-196] - Amend license from LGPLv3 to modified BSD
    * [IKASAN-204] - Realign SVN trunk/branches to remove blocker development currently on trunk   
    * [IKASAN-220] - merge 0.7.4 into trunk
    * [IKASAN-223] - Clean up the Ikasan Domain Model
    * [IKASAN-225] - Fix license text on tld files
    * [IKASAN-238] - Configure the Maven repositories within project pom