@@ -269,6 +269,8 @@
 </li>
 <li>[<a href='http://open.jira.com/browse/IKASAN-537'>IKASAN-537</a>] -         Adjust package name of the connector-sftp client endpoint to reflect it as an endpoint
 </li>
+<li>[<a href='http://open.jira.com/browse/IKASAN-563'>IKASAN-563</a>] -         Allow file transfer temporary files to overwrite any existing temp files as part of the file delivery
+</li>
 </ul>
     
 <h2>        New Feature
